--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,15 +21,21 @@ phases:
       # Building app docker image
       - echo Build started on `date`
       # print out current working directory
-      - echo $PWD
+      # - echo $PWD
       # print out SNYK TOKEN
-      - echo $SNYK_TOKEN
+      # - echo $SNYK_TOKEN
       - echo Building the Docker image...
       - export timestamp=$(date +%Y%m%d%H%M%S)
       - docker build -t $IMAGE_REPO_NAME:$timestamp .
       - docker tag $IMAGE_REPO_NAME:$timestamp $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$timestamp
-      - docker run --rm --env SNYK_TOKEN -v /var/run/docker.sock:/var/run/docker.sock snyk/snyk:docker snyk test --docker $IMAGE_REPO_NAME:$timestamp --severity-threshold=critical --json
-      - docker run --rm --env SNYK_TOKEN -v $PWD:/app snyk/snyk:docker 'snyk code test'
+  sca:
+    on-failure: CONTINUE
+    commands:
+      - docker run --rm --env SNYK_TOKEN -v /var/run/docker.sock:/var/run/docker.sock -v $PWD:/app snyk/snyk:docker snyk test --docker $IMAGE_REPO_NAME:$timestamp --severity-threshold=critical --json-file-output=/app/sca_vuln.json
+  sast:
+    on-failure: CONTINUE
+    commands:
+      - docker run --rm --env SNYK_TOKEN -v $PWD:/app snyk/snyk:docker snyk code test --json-file-output=/app/sast_vuln.json
 
       # Scan app docker image with Snyk
       # - ./snyk test --severity-threshold=medium --docker $IMAGE_REPO_NAME:$timestamp --file=./Dockerfile --app-vulns --exclude-base-image-vulns
