--- a/buildspec.yml
+++ b/buildspec.yml
@@ -48,7 +48,7 @@ phases:
       - aws s3 cp sca_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sca/sca_$IMAGE_REPO_NAME_$timestamp.json
       - echo generating a pre-signed url for sharing later
       - PRESIGNED_URL=$(aws s3 presign s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sca/sca_$IMAGE_REPO_NAME_$timestamp.json)
-      - echo The pre-signed URL is: $PRESIGNED_URL
+      - echo The pre-signed URL is $PRESIGNED_URL
       - echo SAST scan reports to S3 for record keeping
       - aws s3 cp sast_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sast/sast_$IMAGE_REPO_NAME_$timestamp.json
       - echo Build completed on `date`
