--- a/buildspec.yml
+++ b/buildspec.yml
@@ -48,9 +48,11 @@ phases:
       - aws s3 cp sca_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sca/sca_$IMAGE_REPO_NAME_$timestamp.json
       - echo generating a pre-signed url for sharing later
       - PRESIGNED_URL=$(aws s3 presign s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sca/sca_$IMAGE_REPO_NAME_$timestamp.json)
-      - echo The pre-signed URL is $PRESIGNED_URL
-      - echo SAST scan reports to S3 for record keeping
-      - aws s3 cp sast_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sast/sast_$IMAGE_REPO_NAME_$timestamp.json
+      - echo Sending pre-signed URL to Slack...
+      - curl -X POST -H 'Content-type: application/json' --data '{"text":"The pre-signed URL of SCA scan of $IMAGE_REPO_NAME:$timestamp: '$PRESIGNED_URL'"}' https://hooks.slack.com/services/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
+      # - echo The pre-signed URL is $PRESIGNED_URL
+      # - echo SAST scan reports to S3 for record keeping
+      # - aws s3 cp sast_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sast/sast_$IMAGE_REPO_NAME_$timestamp.json
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$timestamp
