--- a/buildspec.yml
+++ b/buildspec.yml
@@ -47,10 +47,21 @@ phases:
       - echo SCA scan reports to S3 for record keeping
       - aws s3 cp sca_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sca/sca_$IMAGE_REPO_NAME_$timestamp.json
       - echo generating a pre-signed url for sharing later
-      - PRESIGNED_URL=$(aws s3 presign s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sca/sca_$IMAGE_REPO_NAME_$timestamp.json)
+      - PRESIGNED_URL_SCA=$(aws s3 presign s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sca/sca_$IMAGE_REPO_NAME_$timestamp.json)
+
+      - echo SAST scan reports to S3 for record keeping
+      - aws s3 cp sast_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sast/sast_$IMAGE_REPO_NAME_$timestamp.json
+      - echo generating a pre-signed url for sharing later
+      - PRESIGNED_URL_SAST=$(aws s3 presign s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sast/sast_$IMAGE_REPO_NAME_$timestamp.json)
+
+
+
+
       - echo Sending pre-signed URL to Slack...
       - >- 
-        curl -X POST -H 'Content-type:application/json' --data "{\"text\": \"SCA Report of ${IMAGE_REPO_NAME}:${timestamp} ${PRESIGNED_URL}\"}" $SLACK_WEBHOOK
+        curl -X POST -H 'Content-type:application/json' --data "{\"text\": \"SCA Report of ${IMAGE_REPO_NAME}:${timestamp} ${PRESIGNED_URL_SCA}\"}" $SLACK_WEBHOOK
+      - >- 
+        curl -X POST -H 'Content-type:application/json' --data "{\"text\": \"SAST Report of ${IMAGE_REPO_NAME}:${timestamp} ${PRESIGNED_URL_SAST}\"}" $SLACK_WEBHOOK
       # - echo The pre-signed URL is $PRESIGNED_URL
       # - echo SAST scan reports to S3 for record keeping
       # - aws s3 cp sast_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sast/sast_$IMAGE_REPO_NAME_$timestamp.json
