--- a/buildspec.yml
+++ b/buildspec.yml
@@ -64,12 +64,28 @@ phases:
         curl -X POST -H 'Content-type:application/json' --data "{\"text\": \"SCA Report of ${IMAGE_REPO_NAME}:${timestamp} ${PRESIGNED_URL_SCA}\"}" $SLACK_WEBHOOK
       - >- 
         curl -X POST -H 'Content-type:application/json' --data "{\"text\": \"SAST Report of ${IMAGE_REPO_NAME}:${timestamp} ${PRESIGNED_URL_SAST}\"}" $SLACK_WEBHOOK
+      - if [ $exit_code_sca -eq 0 ] && [ $exit_code_sast -eq 0 ]; then 
+          {
+            echo Build completed on `date`;
+            echo Pushing the Docker image...;
+            docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$timestamp;
+          };
+        else 
+          if [ $exit_code_sca -ne 0 ]; then 
+            >-
+            curl -X POST -H 'Content-type:application/json' --data "{\"text\": \"Build of ${IMAGE_REPO_NAME}:${timestamp} due to SCA check exit code: ${exit_code_sca}\"}" $SLACK_WEBHOOK; 
+          fi
+          if [ $exit_code_sast -ne 0 ]; then 
+            >-
+            curl -X POST -H 'Content-type:application/json' --data "{\"text\": \"Build of ${IMAGE_REPO_NAME}:${timestamp} due to SAST check exit code: ${exit_code_sast}\"}" $SLACK_WEBHOOK; 
+          fi
+        fi
       # - echo The pre-signed URL is $PRESIGNED_URL
       # - echo SAST scan reports to S3 for record keeping
       # - aws s3 cp sast_vuln.json s3://poc-mc-devsecops-reports/$IMAGE_REPO_NAME/sast/sast_$IMAGE_REPO_NAME_$timestamp.json
-      - echo Build completed on `date`
-      - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$timestamp
+      # - echo Build completed on `date`
+      # - echo Pushing the Docker image...
+      # - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$timestamp
       # - echo deploy to Lambda
       # - aws lambda update-function-code --function-name $FUNCTION_NAME --image-uri $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$timestamp
       # - echo finished execution
